tests/integration/should-compile/If-Else.twee
::Start

<<set $var to 1>>

<<if $var == 1>>Text<<endif>>


<<set $var to 2>>

<<if $var == 2>>Text1<<else>>Text2<<endif>>


<<set $var to 3>>

<<if $var == 2>>Text1<<else>>Text2<<endif>>


<<set $var to 4>>

<<if $var == 4>>Text1<<else if $var == 5>>Text2<<endif>>


<<set $var to 5>>

<<if $var == 4>>Text1<<else if $var == 5>>Text2<<endif>>


<<set $var to 6>>

<<if $var == 4>>Text1<<else if $var == 5>>Text2<<endif>>


<<set $var1 to 1>>
<<set $var2 to 1>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 2>>
<<set $var2 to 1>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 2>>
<<set $var2 to 2>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 2>>
<<set $var2 to 3>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 2>>
<<set $var2 to 4>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 3>>
<<set $var2 to 1>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>


<<set $var1 to 4>>
<<set $var2 to 1>>

<<if $var1 == 1>>
    Variable 1 ist 1
<<else if $var1 == 2>>
    <<if $var2 == 1>>
        Variable 1 ist 2
        Variable 2 ist 1
    <<else if $var2 == 2>>
        Variable 1 ist 2
        Variable 2 ist 2
    <<else if $var2 == 3>>
        Variable 1 ist 2
        Variable 2 ist 3
    <<else>>
        Variable 1 ist 2
        Variable 2 ist nicht 1, 2 oder 3
    <<endif>>
<<else if $var1 == 3>>
    Variable 1 ist 3
<<else>>
    Variable 1 ist nicht 1, 2 oder 3
<<endif>>
