tests/integration/should-fail/MultipleElse.twee
::Start
<<if true>>Text1<<else>>Text2<<else>>Text3<<endif>>
